[gd_scene load_steps=5 format=2]

[ext_resource path="res://DriveInScreen/SelectableTools/SelectableTool.gd" type="Script" id=1]
[ext_resource path="res://DriveInScreen/SelectableTools/scalpel.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 112.285

[sub_resource type="CircleShape2D" id=2]
radius = 88.3629

[node name="SelectableTool" type="Node2D" groups=[
"selectable_tool",
]]
z_index = 2
z_as_relative = false
script = ExtResource( 1 )
tool_type = 0

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="PickupArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea"]
shape = SubResource( 1 )

[node name="PatientOverlap" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PatientOverlap"]
shape = SubResource( 2 )
disabled = true
[connection signal="input_event" from="PickupArea" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="PickupArea" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="PickupArea" to="." method="_on_Area2D_mouse_exited"]
[connection signal="area_entered" from="PatientOverlap" to="." method="_on_PatientOverlap_area_entered"]
[connection signal="area_exited" from="PatientOverlap" to="." method="_on_PatientOverlap_area_exited"]
